# auto-clipper

./: .gitignore  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  build.spec  config.json  installer.iss  main.py  requirements.txt  requirments.txt  проблемы.txt
core/: config.py  groq_client.py  log.py  parser.py  queue.py
native/: Cargo.toml  build.rs  clipqueue.manifest  clipqueue.rc
native/src/: main.rs
tests/: test_config.py  test_parser.py  test_queue.py
ui/: tray.py  window.py
