[package]
name = "clipqueue"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "ClipQueue"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]}

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level   = "z"
lto         = true
codegen-units = 1
strip       = true
panic       = "abort"
